--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "simple_types"
 version = "0.1"
 dependencies = [
     "lark @ git+https://github.com/educhesne/lark.git@attributed_lark",
-    "outlines @ git+https://github.com/educhesne/outlines@attributed_lark_compatibility",
+    "outlines @ git+https://github.com/educhesne/outlines.git@attributed_lark_compatibility",
     "logical-unification",
     "ipywidgets",
     "jupyter-book",
